
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__* charCount ;
 size_t charCountLen ;
 size_t countPointer ;
 int printString (char*) ;
 int printTableAbbreviation () ;
 int sendAbbr ;
 char* tableNameList ;
 int tableNameListLen ;

void printStringAndQueueChar(char* str)
{
  if (charCount[countPointer] > 0 && countPointer < charCountLen)
  {
    countPointer++;
  }
  sendAbbr = 1;
  if (str[0] != '\0')
  {
    printString(str);

    for (int i = 0; i < tableNameListLen-1; i++)
    {
      if (tableNameList[i] == '\0')
      {
        tableNameList[i] = str[0];
        tableNameList[i+1] = '\0';
        break;
      }
      else if (i == tableNameListLen-2)
      {
        printTableAbbreviation();
        break;
      }
    }







  }
}
