; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/dz60/keymaps/marianas/extr_relativity.c_printStringAndQueueChar.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/dz60/keymaps/marianas/extr_relativity.c_printStringAndQueueChar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@charCount = common dso_local global i64* null, align 8
@countPointer = common dso_local global i64 0, align 8
@charCountLen = common dso_local global i64 0, align 8
@sendAbbr = common dso_local global i32 0, align 4
@tableNameListLen = common dso_local global i32 0, align 4
@tableNameList = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @printStringAndQueueChar(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i64*, i64** @charCount, align 8
  %5 = load i64, i64* @countPointer, align 8
  %6 = getelementptr inbounds i64, i64* %4, i64 %5
  %7 = load i64, i64* %6, align 8
  %8 = icmp sgt i64 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %1
  %10 = load i64, i64* @countPointer, align 8
  %11 = load i64, i64* @charCountLen, align 8
  %12 = icmp ult i64 %10, %11
  br i1 %12, label %13, label %16

13:                                               ; preds = %9
  %14 = load i64, i64* @countPointer, align 8
  %15 = add i64 %14, 1
  store i64 %15, i64* @countPointer, align 8
  br label %16

16:                                               ; preds = %13, %9, %1
  store i32 1, i32* @sendAbbr, align 4
  %17 = load i8*, i8** %2, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 0
  %19 = load i8, i8* %18, align 1
  %20 = sext i8 %19 to i32
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %64

22:                                               ; preds = %16
  %23 = load i8*, i8** %2, align 8
  %24 = call i32 @printString(i8* %23)
  store i32 0, i32* %3, align 4
  br label %25

25:                                               ; preds = %60, %22
  %26 = load i32, i32* %3, align 4
  %27 = load i32, i32* @tableNameListLen, align 4
  %28 = sub nsw i32 %27, 1
  %29 = icmp slt i32 %26, %28
  br i1 %29, label %30, label %63

30:                                               ; preds = %25
  %31 = load i8*, i8** @tableNameList, align 8
  %32 = load i32, i32* %3, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds i8, i8* %31, i64 %33
  %35 = load i8, i8* %34, align 1
  %36 = sext i8 %35 to i32
  %37 = icmp eq i32 %36, 0
  br i1 %37, label %38, label %51

38:                                               ; preds = %30
  %39 = load i8*, i8** %2, align 8
  %40 = getelementptr inbounds i8, i8* %39, i64 0
  %41 = load i8, i8* %40, align 1
  %42 = load i8*, i8** @tableNameList, align 8
  %43 = load i32, i32* %3, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds i8, i8* %42, i64 %44
  store i8 %41, i8* %45, align 1
  %46 = load i8*, i8** @tableNameList, align 8
  %47 = load i32, i32* %3, align 4
  %48 = add nsw i32 %47, 1
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds i8, i8* %46, i64 %49
  store i8 0, i8* %50, align 1
  br label %63

51:                                               ; preds = %30
  %52 = load i32, i32* %3, align 4
  %53 = load i32, i32* @tableNameListLen, align 4
  %54 = sub nsw i32 %53, 2
  %55 = icmp eq i32 %52, %54
  br i1 %55, label %56, label %58

56:                                               ; preds = %51
  %57 = call i32 (...) @printTableAbbreviation()
  br label %63

58:                                               ; preds = %51
  br label %59

59:                                               ; preds = %58
  br label %60

60:                                               ; preds = %59
  %61 = load i32, i32* %3, align 4
  %62 = add nsw i32 %61, 1
  store i32 %62, i32* %3, align 4
  br label %25

63:                                               ; preds = %56, %38, %25
  br label %64

64:                                               ; preds = %63, %16
  ret void
}

declare dso_local i32 @printString(i8*) #1

declare dso_local i32 @printTableAbbreviation(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
